--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Accio Jobs Layout</title>
+</head>
+<body>
+    <h1>Welcome to Accio Jobs!</h1>
+</body>
+</html>
